@@ -57,8 +57,6 @@ elsif RUBY_PLATFORM =~ /-nextstep|-rhapsody|-darwin/
   CFLAGS.gsub!( /-arch\s\w*/, '' )
 end
 
-$log = open('mkmf.log', 'w')
-
 if /mswin32/ =~ RUBY_PLATFORM
   OUTFLAG = '-Fe'
 else
@@ -78,17 +76,22 @@ def rm_f(*files)
   end
 end
 
+$log = nil
+
 $orgerr = $stderr.dup
 $orgout = $stdout.dup
 def xsystem command
   Config.expand(command)
   if $DEBUG
     puts command
+    $stdout.flush
     return system(command)
   end
+  $log ||= open('mkmf.log', 'w')
   $stderr.reopen($log) 
   $stdout.reopen($log) 
   puts command
+  $stdout.flush
   r = system(command)
   $stderr.reopen($orgerr)
   $stdout.reopen($orgout)
